[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
protocols = { version = "0.1.0", path = "../protocols" }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tokio-util = "0.7.15"
tungstenite = "0.27.0"
