[package]
name = "users"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["ws"] }
dotenvy = "0.15.7"
error = { version = "0.1.0", path = "../error" }
rand = { version = "0.8", features = ["std"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "macros"] }
tokio = "1.45.1"
